feat: update to openapi generated file packages to fix archunit violations